--- a/app/src/main/res/layout/activity_loadingview.xml
+++ b/app/src/main/res/layout/activity_loadingview.xml
@@ -7,14 +7,27 @@
     xmlns:loading="http://schemas.android.com/apk/res-auto"
     tools:context="com.scott.honerv8loadingview.MainActivity">
 
-    <com.scott.honerv8loadingview.view.HonerLoadingView
-        android:layout_centerInParent="true"
-        loading:loading_dur="1500"
-        loading:loading_peer_delay="140"
-        loading:loading_point_radius="4dp"
-        loading:loading_scale_rate="1"
-        loading:loading_point_count="6"
-        loading:loading_color="@color/colorPrimary"
+    <!--<com.scott.honerv8loadingview.view.HonerLoadingView-->
+        <!--android:layout_centerInParent="true"-->
+        <!--loading:loading_dur="1500"-->
+        <!--loading:loading_peer_delay="100"-->
+        <!--loading:loading_point_radius="4dp"-->
+        <!--loading:loading_scale_rate="1"-->
+        <!--loading:loading_point_count="8"-->
+        <!--loading:loading_color="@color/colorPrimary"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent" />-->
+    <com.scott.honerv8loadingview.view.CircleLoadingView
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
+    <!--<com.scott.honerv8loadingview.view.ProgressWheel-->
+        <!--xmlns:wheel="http://schemas.android.com/apk/res-auto"-->
+        <!--android:id="@+id/progress_view"-->
+        <!--android:layout_width="35dp"-->
+        <!--android:layout_height="35dp"-->
+        <!--android:layout_centerInParent="true"-->
+        <!--android:visibility="visible"-->
+        <!--wheel:matProg_barColor="#cccccc"-->
+        <!--wheel:matProg_progressIndeterminate="true" />-->
 </RelativeLayout>
