--- a/app/src/main/res/layout/activity_loadingview.xml
+++ b/app/src/main/res/layout/activity_loadingview.xml
@@ -17,9 +17,9 @@
         <!--loading:loading_color="@color/colorPrimary"-->
         <!--android:layout_width="match_parent"-->
         <!--android:layout_height="match_parent" />-->
-    <com.scott.honerv8loadingview.view.CircleLoadingView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+    <!--<com.scott.honerv8loadingview.view.CircleLoadingView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent" />-->
 
     <!--<com.scott.honerv8loadingview.view.ProgressWheel-->
         <!--xmlns:wheel="http://schemas.android.com/apk/res-auto"-->
@@ -30,4 +30,15 @@
         <!--android:visibility="visible"-->
         <!--wheel:matProg_barColor="#cccccc"-->
         <!--wheel:matProg_progressIndeterminate="true" />-->
+
+    <!--<com.scott.honerv8loadingview.view.BesasierView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent" />-->
+    <!--<com.scott.honerv8loadingview.view.BesasierViewDemo-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent" />-->
+
+    <com.scott.honerv8loadingview.view.BesasierViewDemo2
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
